[package]
name = "scd-41_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.0-beta.7"
linux-embedded-hal = "0.4"
scd4x = "0.3" 
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"  # For JSON serialization
chrono = "0.4"
env_logger = "0.9"